<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGecmisTanilar"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:text="@string/btnGecmisTanilar"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24000001" />

    <Button
        android:id="@+id/btnTaniKoyma"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnTaniKoyma"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGecmisTanilar" />

    <Button
        android:id="@+id/btnYazilanİlaclar"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnYazilanIlaclar"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTaniKoyma" />

    <Button
        android:id="@+id/btnVurulanIgneler"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnVurulanIgneler"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYazilanİlaclar" />

    <Button
        android:id="@+id/button5"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnHekimBilgileri"
        android:textAllCaps="false"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVurulanIgneler" />
</android.support.constraint.ConstraintLayout>